--- a/src/SConscript
+++ b/src/SConscript
@@ -7,3 +7,5 @@ BIN_DIR=os.environ['BIN_DIR'];
 env.Program(os.path.join(BIN_DIR, 'csv_view'), ['csv_view.c']);
 env.Program(os.path.join(BIN_DIR, 'csv_view_remove'), ['csv_view_remove.c']);
 env.Program(os.path.join(BIN_DIR, 'csv_view_checkable'), ['csv_view_checkable.c']);
+env.Program(os.path.join(BIN_DIR, 'table_csv_view'), ['table_csv_view.c', 'table_client_custom_binder.c']);
+env.Program(os.path.join(BIN_DIR, 'table_csv_view_remove'), ['table_csv_view_remove.c', 'table_client_custom_binder.c']);
